  * Add tools option to disable output buffering
  * Remove mgmt
  * Add stats (successor to mgmt)
  * Add library versioning
  * Add client-side hello allowing client to send system and dependency information
  * Update various internal AXA protocol semantics for AXA Protocol 2
  * Add 8601 timestamps to accounting messages
  * Remove axa-doc package as it had incomplete example code

 -- Farsight Security, Inc. <software@farsightsecurity.com>  Tue, 03 Apr 2018 16:17:21 -0400

axa (1.6.0-1) unstable; urgency=low

  * Fix make check Clang compiler warnings
  * Fix small bugs in apikey transport
  * Fix sratool/radtool command completion bug
  * Fix sratool/radtool overzealous help bug
  * Fix `make check` when building without yajl
  * Add axa_apikey_load_and_check_key()
  * Update README (additional examples)
  * Remove configure option to select compile-time list of available ciphers
  * Make config file errors emitted according to axa_debug level
  * Make nmsg file and udp output objects unbuffered

 -- Farsight Security, Inc. <software@farsightsecurity.com>  Thu, 29 Jun 2017 18:10:44 +0000

axa (1.5.1-1) unstable; urgency=low

  * Fix Clang compiler warnings
  * Conditionally (don't) use deprecated openssl function

 -- Farsight Security, Inc. <software@farsightsecurity.com>  Tue, 02 May 2017 16:43:44 +0000

axa (1.5.0) UNRELEASED; urgency=low

  * Add apikey support
  * Add per-user config file
  * Update copyright headers for 2017

 -- Mike Schiffman <mschiffm@fsi.io>  Sat, 01 Apr 2017 19:17:41 +0000

axa (1.4.0) UNRELEASED; urgency=low

  * Fix bug in sratunnel where pcap output could underflow a counter and crash
  * Fix bug in sratool where 'get channels' would fail
  * Fix bug in sratunnel where error messages would fail to emit
  * Fix typos in manuals
  * Fix nonportable doxygen version check
  * Add missing files to EXTRA_DIST
  * Update README (proper package versions, better install instructions)
