@@ -2,5 +2,5 @@ axa-tools-dbg
 axa-tools
 libaxa-dev
 tmp
-libaxa0
-libaxa0-dbg
+libaxa1
+libaxa1-dbg
