@@ -12,6 +12,7 @@ axa (2.0.0-1) debian-fsi; urgency=medium
   * Update various internal AXA protocol semantics for AXA Protocol 2
   * Add 8601 timestamps to accounting messages
   * Remove axa-doc package as it had incomplete example code
+  * Interfaces changes, library package changed from libaxa0 to libaxa1
 
  -- Farsight Security, Inc. <software@farsightsecurity.com>  Tue, 03 Apr 2018 16:17:21 -0400
 
